--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 		"php-stubs/wordpress-stubs": "^6.3",
 		"php-stubs/wordpress-tests-stubs": "^6.3",
 		"spatie/phpunit-watcher": "^1.23",
+		"symfony/process": "^6.4.20",
 		"yoast/phpunit-polyfills": "^1.1",
 		"sirbrillig/phpcs-variable-analysis": "^2.11",
 		"wp-cli/i18n-command": "^2.4",
