--- a/package.json
+++ b/package.json
@@ -36,13 +36,25 @@
 		"prepare": "husky",
 		"postinstall": "composer install"
 	},
+	"overrides": {
+		"@inquirer/editor": "5.0.3",
+		"axios": "1.11.0",
+		"compression": "1.8.1",
+		"form-data": "4.0.4",
+		"node-forge": "1.3.2",
+		"on-headers": "1.1.0",
+		"tar-fs": "3.1.1",
+		"tmp": "0.2.5",
+		"ws": "8.18.3"
+	},
 	"devDependencies": {
+		"ajv": "8.17.1",
 		"@babel/node": "^7.23.9",
 		"@babel/plugin-proposal-object-rest-spread": "^7.20.7",
 		"@babel/plugin-transform-react-jsx": "^7.23.4",
 		"@babel/preset-env": "^7.24.0",
 		"@babel/register": "^7.23.7",
-		"@playwright/test": "^1.45.3",
+		"@playwright/test": "^1.57.0",
 		"@wordpress/e2e-test-utils-playwright": "^1.4.0",
 		"@wordpress/env": "^10.4.0",
 		"@wordpress/eslint-plugin": "^20.1.0",
@@ -58,7 +70,7 @@
 		"file-loader": "^6.2.0",
 		"filemanager-webpack-plugin": "^8.0.0",
 		"filenamify": "^4.2.0",
-		"glob": "^10.2.7",
+		"glob": "^10.5.0",
 		"gulp": "^5.0.0",
 		"gulp-change-file-content": "^1.0.1",
 		"gulp-zip": "^4.2.0",
